fixing footer align issue

--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@ body{
 }
 
 .portfolio{
-  background-image: url("/images/header.jpg");
-  width: 100%;
-  height: 500px;
-
+  background-image: url('/images/coding.jpg');
+  background-size: cover;
+  text-align: center;
+  font-size: 25px;
+  color: white;
+  
 }
 
 nav{
